--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+bin
+target
+.project
+.classpath
+.idea/*
+.settings
+.idea
