--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.m1miageprojet.app</groupId>
   <artifactId>RobotWar</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>RobotWar</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -22,22 +22,18 @@
      </resource>
    </resources>
    <testResources>
-            <testResource>
-                <directory>src/test/java</directory>
-            </testResource>
+       <testResource>
+           <directory>src/test/java</directory>
+       </testResource>
     </testResources>
   	<plugins>
   		<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
 				<configuration>
-				  <archive>
-					<manifest>
-						<!-- Jar file entry point -->
-						<mainClass>com.mkyong.core.utils.App</mainClass>
-					</manifest>
-				  </archive>
-				</configuration>
+        			<outputDirectory>./</outputDirectory>
+      			</configuration>
 			</plugin>
   	</plugins>
   </build>
