--- a/pom.xml
+++ b/pom.xml
@@ -1,40 +1,47 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.m1miageprojet.app</groupId>
-  <artifactId>RobotWar</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0</version>
-  <name>RobotWar</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-  	<resources>
-     <resource>
-       <directory>src/main/java</directory>
-     </resource>
-   </resources>
-   <testResources>
-       <testResource>
-           <directory>src/test/java</directory>
-       </testResource>
-    </testResources>
-  	<plugins>
-  		<plugin>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.m1miageprojet.app</groupId>
+	<artifactId>RobotWar</artifactId>
+	<packaging>jar</packaging>
+	<version>1.0</version>
+	<name>RobotWar</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>src/test/java</directory>
+			</testResource>
+		</testResources>
+		<plugins>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.3.1</version>
 				<configuration>
-        			<outputDirectory>./</outputDirectory>
-      			</configuration>
+					<outputDirectory>./</outputDirectory>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>com.m1miageprojet.app.App</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
 			</plugin>
-  	</plugins>
-  </build>
+		</plugins>
+	</build>
 </project>
