#1 ajout des projets interfaces et plugins au projet principal

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,40 @@ moteur/.settings
 moteur/.idea
 moteur-1.0.jar
 
+interfaces/target/
+interfaces/pom.xml.tag
+interfaces/pom.xml.releaseBackup
+interfaces/pom.xml.versionsBackup
+interfaces/pom.xml.next
+interfaces/release.properties
+interfaces/dependency-reduced-pom.xml
+interfaces/buildNumber.properties
+interfaces/.mvn/timing.properties
+interfaces/bin
+interfaces/target
+interfaces/.project
+interfaces/.classpath
+interfaces/.idea/*
+interfaces/.settings
+interfaces/.idea
+
+plugins/target/
+plugins/pom.xml.tag
+plugins/pom.xml.releaseBackup
+plugins/pom.xml.versionsBackup
+plugins/pom.xml.next
+plugins/release.properties
+plugins/dependency-reduced-pom.xml
+plugins/buildNumber.properties
+plugins/.mvn/timing.properties
+plugins/bin
+plugins/target
+plugins/.project
+plugins/.classpath
+plugins/.idea/*
+plugins/.settings
+plugins/.idea
+
 target/
 pom.xml.tag
 pom.xml.releaseBackup
