--- a/moteur/pom.xml
+++ b/moteur/pom.xml
@@ -17,6 +17,11 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.m1miageprojet.project</groupId>
+			<artifactId>interfaces</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
