--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
                     <configuration>
                         <source>1.5</source>
                         <target>1.5</target>
+                        <fork>true</fork>
+                        <executable>C:\Program Files\Java\jdk1.7.0_79\bin\javac</executable>
                     </configuration>
                 </plugin>
             </plugins>
