--- a/moteur/pom.xml
+++ b/moteur/pom.xml
@@ -18,27 +18,33 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>RobotWar</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.1</version>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>3.0.0</version>
 				<configuration>
-					<outputDirectory>../</outputDirectory>
+					
 					<archive>
 						<manifest>
 							<mainClass>com.m1miageprojet.app.App</mainClass>
 						</manifest>
 					</archive>
+					<descriptorRefs>
+      					<descriptorRef>jar-with-dependencies</descriptorRef>
+    				</descriptorRefs>
+					<outputDirectory>../</outputDirectory>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id> <!-- this is used for inheritance merges -->
+						<phase>package</phase> <!-- bind to the packaging phase -->
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
