--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ moteur/.settings
 moteur/.idea
 RobotWar-jar-with-dependencies.jar
 moteur/moteur-1.0.jar
+moteur/PartieTest.xml
+moteur/Sauvegarde.xml
 moteur-1.0.jar
 
 interfaces/target/
@@ -75,3 +77,4 @@ RobotWar.iml
 interfaces/interfaces.iml
 moteur/moteur.iml
 plugins/plugins.iml
+Sauvegarde.xml
